# routes/desks.js
@@ -2,7 +2,7 @@ const express = require('express');
 const router = express.Router();
 const deskController = require('../controllers').desk;
 
-router.get('/get-desks', deskController.getDesks);
-router.post('/create', deskController.createDesk);
+router.get('/', deskController.getDesks);
+router.post('/', deskController.createDesk);
 
 module.exports = router;
