# routes/tasks.js
@@ -2,7 +2,7 @@ const express = require('express');
 const router = express.Router();
 const taskController = require('../controllers').task;
 
-router.get('/get-tasks', taskController.getTasks);
-router.post('/create', taskController.createTask);
+router.get('/', taskController.getTasks);
+router.post('/', taskController.createTask);
 
 module.exports = router;
